# Aegis

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  deny.toml  rustfmt.toml
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: ai-tells.yml  auto-close.yml  ci.yml  coverage.yml  deny.yml  linux.yml  macos.yml  release.yml  windows.yml
aegis/: Cargo.toml
aegis-settings/: index.html
aegis-settings/src-tauri/: Cargo.toml  tauri.conf.json
aegis-settings/src-tauri/capabilities/: default.json
aegis-settings/src-tauri/src/: main.rs
aegis-settings/src/auth/: signin.html  signin.js
aegis-settings/src/onboarding/: index.html  onboarding.js
aegis-settings/src/welcome/: index.html  welcome.css  welcome.js
aegis/demos/: bench_find_action.rs  bench_stt.rs  demo_github.rs  demo_gmail.rs  demo_gmail_full.rs  demo_hotkey.rs  demo_loading.rs  demo_macos_input.rs  demo_point.rs  demo_soundwave.rs  demo_stt.rs  demo_win.rs
aegis/evals/runners/: tool_routing.rs
aegis/examples/: test_find_action_bench.rs  test_github.rs  test_gmail.rs  test_gmail_full.rs  test_hotkey.rs  test_loading.rs  test_soundwave.rs  test_stt_bench.rs  test_win.rs
aegis/src/: actions.rs  intent.rs  lib.rs  main.rs  orchestrator.rs  painter.rs  tuning.rs  voice.rs  voice_session.rs
aegis/src/ai_cursor/: common.rs  macos.rs  mod.rs  platform.rs  winit.rs
aegis/src/audio/: input.rs  mod.rs  output.rs
aegis/src/hotkey/: global_hotkey.rs  mod.rs  unix_signals.rs
aegis/src/input/: macos.rs
aegis/src/integrations/: github.rs  gmail.rs  health.rs  mod.rs  spotify.rs  youtube.rs
aegis/src/mouse_position/: crossplatform.rs  hyprland.rs  mod.rs
aegis/src/providers/: claude.rs  stt_deepgram.rs  tts_cartesia.rs
aegis/src/providers/claude/: agent_loop.rs  chat.rs  classifier.rs  find_action.rs  integration.rs  memory.rs  mod.rs  parsing.rs  prompt.rs
aegis/src/routelet/: redact.rs  sample.rs
aegis/src/screenshot/: crossplatform.rs  grim.rs  mod.rs  xcap.rs
demos/: Cargo.toml
docs/: architecture.md  memory-architecture.md  testing-macos.md
launcher/: package.json
launcher/src-tauri/: Cargo.toml  tauri.conf.json
launcher/src-tauri/src/: main.rs
launcher/src/auth/: signin.js
launcher/src/onboarding/: index.html  macos.html  onboarding.js
launcher/src/shared/: base.css
launcher/src/welcome/: index.html  welcome.css  welcome.js
launcher/tests/: welcome.test.js
memex/: Cargo.toml
memex/src/: lib.rs  main.rs
models/routelet/: head.json
proxy/: README.md  package-lock.json  package.json  tsconfig.json  wrangler.toml
proxy/scripts/: test-tiers.sh
proxy/src/: constants.ts  http.ts  index.ts  tiers.ts  types.ts  usage.ts
proxy/src/handlers/: anthropic.ts  routelet.ts  tokens.ts
reports/: eval_routelet.py
scripts/: install-hooks.sh  update-binary.sh
src/: actions.rs  main.rs  voice.rs
src/cursor/: hyprland.rs  winit.rs
src/integrations/: mod.rs  youtube.rs
src/providers/: claude.rs  mod.rs  stt_deepgram.rs  tts_cartesia.rs
src/screenshot/: grim.rs
