[package]
name = "aegis"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "MIT"
default-run = "aegis"

[features]
# Backends are selected automatically by target OS: Linux → Hyprland (GTK
# layer-shell, signal hotkeys, grim), macOS/Windows → winit overlay + portable
# crates (xcap, global-hotkey, mouse_position). A normal per-OS build needs no
# feature flag. This single dev-only override forces the crossplatform/winit
# path on Linux so the macOS/Windows code can be exercised from a Linux box.
default = []
force-crossplatform = []

[dependencies]
base64 = "0.22.1"
cpal = "0.17.3"
dotenvy = "0.15.7"
futures-util = "0.3.32"
hound = "3.5.1"
image = "0.25.10"
reqwest = { version = "0.13.3", features = ["blocking", "json", "multipart", "stream", "query"] }
rodio = "0.22.2"
serde_json = "1.0.149"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros"] }
tokio-tungstenite = { version = "0.29.0", features = ["native-tls"] }
tokio-util = { version = "0.7", default-features = false }
uuid = { version = "1.10", features = ["v4"] }
dirs = "5.0"
rusqlite = { version = "0.32", features = ["bundled", "blob"] }
fast_image_resize = { version = "5", features = ["image"] }
open = "5"
url = "2"
google-gmail1 = "7"
yup-oauth2 = "12"
hyper-util = { version = "0.1", features = ["client-legacy", "http2", "tokio"] }
hyper-rustls = { version = "0.27", features = ["native-tokio", "http2", "ring"], default-features = false }
rustls = { version = "0.23", default-features = false, features = ["ring"] }

# Crossplatform overlay (winit + softbuffer + tiny-skia) and portable backends
# (xcap, global-hotkey, mouse_position). Selected on macOS/Windows, and on Linux
# under `force-crossplatform`. Unconditional rather than target-scoped because a
# target-cfg dependency table cannot be gated by a feature; these all build on
# Linux too, so the dev override has them available.
global-hotkey = "0.8"
mouse_position = "0.1"
softbuffer = "0.4"
tiny-skia = "0.11"
winit = "0.30"
xcap = "0.9.4"

# Linux/Hyprland-only: GTK layer-shell overlay, Hyprland IPC, POSIX signal
# hotkeys, and the JACK cpal backend (unioned onto the base cpal above).
[target.'cfg(target_os = "linux")'.dependencies]
gtk = { package = "gtk4", version = "0.11.3", features = ["v4_6"] }
gtk4-layer-shell = "0.8.0"
hyprland = "0.4.0-beta.3"
signal-hook = "0.4.4"
cpal = { version = "0.17.3", features = ["jack"] }

# macOS-only renderer: softbuffer's macOS backend strips alpha at the
# CGImage level (CGImageAlphaInfo::NoneSkipFirst), so we use wgpu instead
# for the cursor overlay's pixel presentation. wgpu's CompositeAlphaMode::
# PostMultiplied honors per-pixel alpha against the desktop. objc2 +
# raw-window-handle remain for any residual NSWindow plumbing.
# objc2-core-graphics provides native CGEvent APIs for input injection.
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-core-foundation = "0.3"
objc2-core-graphics = "0.3"
raw-window-handle = "0.6"
wgpu = "22"
bytemuck = "1"
pollster = "0.4"

# Demo and benchmark binaries live in the sibling `aegis-demos` crate
# (../demos), which depends on this library. Keeping them out of this package
# means `cargo build`/`test -p aegis` never compiles them, so the main app
# builds per-OS with no feature flags.
